2016-01-25  Robert D. Vincent <robert.d.vincent@mcgill.ca
	* Objects/brainsuite_io.c: Added basic support for loading
	BrainSuite format connectivity files (.dft/.dfc).

2015-09-21  Robert Vincent <robert.d.vincent@mcgill.ca>
	* Volumes/create_slice.c, Volumes/interpolate.c,
	Include/bicpl/vol_prototypes.h: Added a create_volume_slice_coding()
	function that can use a colour_coding_struct as an alternative to
	the use of a simple colour map. This is needed when the range of the
	volume data is either too large or too small for the simple map to
	be useful.

2015-05-20  Robert Vincent <robert.d.vincent@mcgill.ca>
	* Prog_utils/globals.c: Implement simple '#' comment convention for
	globals files.

2015-05-05  Robert Vincent <robert.d.vincent@mcgill.ca>
	* Objects/freesurfer_io.c: Added basic support for loading
	FreeSurfer format surfaces.

2009-06-29  Claude Lepage <claude@bic.mni.mcgill.ca>
	* Fixed bug in viewport clipping in render.c (offset out of range would
	  cause seg fault in register)

2008-12-19  Claude Lepage <claude@bic.mni.mcgill.ca>
	* Added obj2brainvisa for conversion from .obj to brainvisa
	* Added rgb option to colour_object for colouring of DTI tracks in .obj
	* Modified Volumes/rend*.c to use size_t as type for loop index
	to allow reading large volumes with more than 2^31 voxels

2007-12-17  Claude Lepage <claude@bic.mni.mcgill.ca>
        * Added objconcat for concatenation of .obj and .txt.

2007-06-27  Claude Lepage <claude@bic.mni.mcgill.ca>
        * Added a bunch of new colour maps
        * Moved the surface utilities from conglomerate to bicpl/tools

2005-08-17  Bert Vincent <bert@bic.mni.mcgill.ca>
	* Added Include/bicpl_internal.h
	* Replaced public/private pseudokeywords with BICAPI/static
	
2005-08-11  Andrew Janke  <a.janke@gmail.com>
	* added epm-header.in
	* added netpbm alternative to ppm for OSX

2005-06-03  Bert Vincent   <bert@bic.mni.mcgill.ca>
	* A series of smallish changes for Windows build compatibility:
	